# token-usage-backend

backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  normalizer.py  schemas.py  svg.py
backend/app/routers/: badges.py  collect.py  usage.py
backend/scripts/: generate_static_badges.py
backend/tests/: conftest.py  test_badge_api.py  test_collect_api.py  test_usage_api.py
