[project]
name = "wakatoken-backend"
version = "0.1.0"
description = "FastAPI backend for ccusage token usage collection, aggregation, and SVG badges."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.5.2",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
